public class AnimatorKey 
{
    public const string IsMove = "IsMove";
    public const string IsJump = "IsJump";
    public const string JumpStay = "JumpStay";
    public const string JumpDown = "JumpDown";
    public const string IsAttack = "IsAttack";

    public class Warrior
    {
        public const string BaseAttack0 = "BaseAttack0";
        public const string BaseAttack1 = "BaseAttack1";
        public const string BaseAttack2 = "BaseAttack2";
        public const string SoftSlash = "SoftSlash";
        public const string UpperSlash = "UpperSlash";
        public const string StrongSlash = "StrongSlash";
    }
}
